fixed text to speech responsiveness

--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
     <script>
      function utter(text){
          const utterThis = new SpeechSynthesisUtterance(document.getElementById(text).innerText);
-         utterThis.lang = "hi-IN";
+         utterThis.lang = "en-IN";
          utterThis.pitch = 1.2;
          speechSynthesis.speak(utterThis);
          console.log(text)
